--- a/pages/publications.html
+++ b/pages/publications.html
@@ -122,9 +122,6 @@
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, Yujie Song, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarCKGBuilder: A Novel Carbon-Assessed Crop Knowledge Graph Construction in Agricultural Domain for Carbon Effects Analytics</font></strong></a>. Arxiv
 
 
-    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and Xiangwei Lai, <a href="http://"><strong><font color= "#00066f">Agri-RelEx: A Sentence-Level Relation Extraction Framework from Chinese Agricultural Text with Attention-Guided and Multi-Scale Graph Convolutional Network</font></strong></a>. Arxiv
-
-
     <!-- <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href=""><strong><font color= "#00066f">TemT: A New Temporal Knowledge Graph Completion Method with Transformer Hawkes Process and Random Walk Aggregation Strategy</font></strong></a>.</li> -->
     <li>Ming Liu*, Ran Liu, Ye Zhu, Hua Wang, Youyang Qu, Rongsheng Li, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and Wray Buntine, <a href="https://arxiv.org/pdf/2405.00704v2"><strong><font color= "#00066f">A Survey on the Real Power of ChatGPT</font></strong></a>. Arxiv
 </ol>
@@ -144,7 +141,13 @@
 <!-- 2025 year -->
 <h4>2025</h4>
 <ol start="1">
+    <li>Yujie Song, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, Hui Zhang, and <a href="" target="_blank">Pingping Zhou</a>, <a href="http://"><strong><font color= "#00066f">Evaluating Reasoning Capability of Large Language Models on Chinese Agricultural-Aware Textual Datasets: A Preliminary Study</font></strong></a>. Under review
 
+
+    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="" target="_blank">Pingping Zhou</a>, <a href="http://"><strong><font color= "#00066f">Relation Extraction from Chinese Agricultural-Aware Text with Attention-Grounded and Multi-Scale Graph Convolutional Network</font></strong></a>. Under review
+
+
+    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://"><strong><font color= "#00066f">Agri-RelEx: A Sentence-Level Relation Extraction Framework from Chinese Agricultural Text with Attention-Guided and Multi-Scale Graph Convolutional Network</font></strong></a>. Arxiv
 </ol>
 
 
@@ -153,13 +156,7 @@
 <!-- 2024 year -->
 <h4>2024</h4>
 <ol start="1">
-    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="" target="_blank">Pingping Zhou</a>, <a href="http://"><strong><font color= "#00066f">Relation Extraction from Chinese Agricultural-Aware Text with Attention-Grounded and Multi-Scale Graph Convolutional Network</font></strong></a>. Under review
-
-
-    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">A Novel Suicide Risk Detection Method via Graph Context-Based Encoding and Adaptive Aggregation</font></strong></a>. Under review
-
-
-    <li>Yujie Song, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, Hui Zhang, and <a href="" target="_blank">Pingping Zhou</a>, <a href="http://"><strong><font color= "#00066f">Evaluating Reasoning Capability of Large Language Models on Chinese Agricultural-Aware Textual Datasets: A Preliminary Study</font></strong></a>. Under review
+    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">A Novel Suicide Risk Detection Method via Graph Context-Based Encoding and Adaptive Aggregation</font></strong></a>. The 7th International Conference on Natural Language Processing (<a href="https://www.icnlp.net/index.html"><strong><u><font color="#874e26">ICNLP-25</font></u></strong></a>). Guangzhou, China, March 21-23, 2025.
 
 
     <li>Jingbao Luo, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, Ran Liu, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://experts.deakin.edu.au/28663-gang-li" target="_blank">Gang Li</a>, Xin Hu, and <a href="" target="_blank">WupengNjust</a>, <a href="https://openreview.net/forum?id=nbY3ZaoiDC"><strong><font color= "#00066f">Can Language Models Capture Human Writing Preferences on Text Summarization?</font></strong></a> Under review
@@ -185,9 +182,7 @@
 
 
     <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://link.springer.com/chapter/10.1007/978-981-99-8073-4_26"><strong><font color= "#00066f">TKGR-RHETNE: A New Temporal Knowledge Graph Reasoning Model via Jointly Modeling Relevant Historical Event and Temporal Neighborhood Event Context</font></strong></a>. The 2023 International Conference on Neural Information Processing (<a href="http://www.iconip2023.org/index.html"><strong><u><font color="#874e26">ICONIP-23</font></u></strong></a>). Changsha, China, November 20-23, 2023. (CCF-C)
-
-
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Chunyan Liu, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>*, <strong><font color= "#00066f">A Systematical Study on Dynamic Fault Localization for Machine Learning Methods</font></strong></a>. (To be Submitted)</li>
+    <!-- <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Chunyan Liu, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>*, <strong><font color= "#00066f">A Systematical Study on Dynamic Fault Localization for Machine Learning Methods</font></strong></a>. (To be Submitted)</li> -->
 </ol>
 
 
@@ -201,8 +196,7 @@
     <li>Hao Zhou, Zekai Chen, Yun Liu, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Wenqi Ren, and Hailing Xiong, <a href="https://www.sciencedirect.com/science/article/pii/S0950705123001600"><strong><font color= "#00066f">Physical-priors-guided DehazeFormer</font></strong></a>. Knowledge-Based Systems (<a href="https://www.journals.elsevier.com/knowledge-based-systems"><strong><u><font color="#874e26">KBS</font></u></strong></a>). (IF = 8.038, CCF-C, JCR Q1, 中科院 Q1)</li>
 
 
-    <li>Chunyan Liu, <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/5040.htm" target="_blank">Meng Yan</a>, Xiaoguang Mao, and <a href="http://www.cse.cqu.edu.cn/info/2097/5325.htm" target="_blank">Zhou Xu</a>, <a href="#"><strong><font color= "#00066f">Review on Dynamic Fault Localization Methods Based on Machine Learning</font></strong></a>. (Under Review)</li>
-
+    <!-- <li>Chunyan Liu, <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/5040.htm" target="_blank">Meng Yan</a>, Xiaoguang Mao, and <a href="http://www.cse.cqu.edu.cn/info/2097/5325.htm" target="_blank">Zhou Xu</a>, <a href="#"><strong><font color= "#00066f">Review on Dynamic Fault Localization Methods Based on Machine Learning</font></strong></a>. (Under Review)</li> -->
 </ol>
 
 
