--- a/pages/publications.html
+++ b/pages/publications.html
@@ -84,7 +84,6 @@
     <!-- <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="#"><strong><font color= "#00066f">A Short Survey on Deep Learning-Based Open Relation Extraction: Recent Advances, Resources and Perspective</font></strong></a>. Arxiv
 
 
-
     <li>Yujie Song, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="https"><strong><font color= "#00066f">Exploring Explicit and Implicit Evidence from Graph Semantic and Structure Learning for Uncertain Knowledge Graph Reasoning</font></strong></a>. Arxiv
 
 
@@ -120,10 +119,6 @@
 
 
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, Yujie Song, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarCKGBuilder: A Novel Carbon-Assessed Crop Knowledge Graph Construction in Agricultural Domain for Carbon Effects Analytics</font></strong></a>. Arxiv
-
-
-    <!-- <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href=""><strong><font color= "#00066f">TemT: A New Temporal Knowledge Graph Completion Method with Transformer Hawkes Process and Random Walk Aggregation Strategy</font></strong></a>.</li> -->
-    <li>Ming Liu*, Ran Liu, Ye Zhu, Hua Wang, Youyang Qu, Rongsheng Li, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and Wray Buntine, <a href="https://arxiv.org/pdf/2405.00704v2"><strong><font color= "#00066f">A Survey on the Real Power of ChatGPT</font></strong></a>. Arxiv
 </ol>
 
 
@@ -161,6 +156,9 @@
 
     <li>Jingbao Luo, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, Ran Liu, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://experts.deakin.edu.au/28663-gang-li" target="_blank">Gang Li</a>, Xin Hu, and <a href="" target="_blank">WupengNjust</a>, <a href="https://openreview.net/forum?id=nbY3ZaoiDC"><strong><font color= "#00066f">Can Language Models Capture Human Writing Preferences on Text Summarization?</font></strong></a> Under review
 
+
+    <!-- <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href=""><strong><font color= "#00066f">TemT: A New Temporal Knowledge Graph Completion Method with Transformer Hawkes Process and Random Walk Aggregation Strategy</font></strong></a>.</li> -->
+    <li>Ming Liu*, Ran Liu, Ye Zhu, Hua Wang, Youyang Qu, Rongsheng Li, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and Wray Buntine, <a href="https://arxiv.org/pdf/2405.00704v2"><strong><font color= "#00066f">A Survey on the Real Power of ChatGPT</font></strong></a>. Arxiv
     <!-- </a> The 2025 Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics (<a href="https://2025.naacl.org/"><strong><u><font color="#874e26">NAACL-25</font></u></strong></a>). Albuquerque, New Mexico, April 29 to May 4, 2025. (CCF-B) -->
 
 
@@ -204,7 +202,7 @@
 <hr align="left" width="100%">
 <h4>2021</h4>
 <ol start="1">
-    <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="#"><strong><font color= "#00066f">Incorporating Contextualized Definition into Term-Pair Representations for Enhanced Hypernym-hyponym Relation Identification</font></strong></a>. (Under Review)</li>
+    <!-- <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="#"><strong><font color= "#00066f">Incorporating Contextualized Definition into Term-Pair Representations for Enhanced Hypernym-hyponym Relation Identification</font></strong></a>. (Under Review)</li> -->
 
 
     <li>Peng Zhao, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and Xiaohui Zhan*, <a href="https://ieeexplore.ieee.org/document/9828919"><strong><font color= "#00066f">An advanced NMF-based approach for single cell data clustering</font></strong></a>. The 2022 2nd International Conference on Information Communication and Software Engineering (<a href="http://www.icse.org/index.html"><strong><u><font color="#874e26">ICICSE-22</font></u></strong></a>). Chongqing, China, March 18-20 2022 (EI Indexed)</li>
