--- a/pages/publications.html
+++ b/pages/publications.html
@@ -118,7 +118,7 @@
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Cong Jin, Yujie Song, Lizhu Xiong, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">GeoSTData-Viz: Visualizing Geographic Spatio-Temporal Data Semantics from Knowledge Graph in Forest Fire-Resource Protection Scenarios</font></strong></a>. Arxiv
 
 
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, Yujie Song, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarCKGBuilder: A Novel Carbon-Assessed Crop Knowledge Graph Construction in Agricultural Domain for Carbon Effects Analytics</font></strong></a>. Arxiv
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, Yujie Song, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarCKGBuilder: A Novel Carbon-Assessed Crop Knowledge Graph Construction in Agricultural Domain for Carbon Effects Analytics</font></strong></a>. Arxiv
 </ol>
 
 
@@ -139,10 +139,10 @@
     <li>Yujie Song, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, Hui Zhang, and <a href="" target="_blank">Pingping Zhou</a>, <a href="http://"><strong><font color= "#00066f">Evaluating Reasoning Capability of Large Language Models on Chinese Agricultural-Aware Textual Datasets: A Preliminary Study</font></strong></a>. Under review
 
 
-    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Hui Zhang, and <a href="" target="_blank">Pingping Zhou</a>, <a href="http://"><strong><font color= "#00066f">AgriRE: Relation Extraction from Chinese Agricultural-Aware Text with Attention-Grounded and Multi-Scale Graph Convolutional Network</font></strong></a>. Under review
+    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Jianglin Dai, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Hui Zhang, and <a href="" target="_blank">Pingping Zhou</a>, <a href="http://"><strong><font color= "#00066f">AgriRE: Relation Extraction from Chinese Agricultural-Aware Text with Attention-Grounded and Multi-Scale Graph Convolutional Network</font></strong></a>. Under review
 
 
-    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://"><strong><font color= "#00066f">Agri-RelEx: A Sentence-Level Relation Extraction Framework from Chinese Agricultural Text with Attention-Guided and Multi-Scale Graph Convolutional Network</font></strong></a>. Arxiv
+    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Jianglin Dai, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://"><strong><font color= "#00066f">Agri-RelEx: A Sentence-Level Relation Extraction Framework from Chinese Agricultural Text with Attention-Guided and Multi-Scale Graph Convolutional Network</font></strong></a>. Arxiv
 </ol>
 
 
@@ -173,7 +173,7 @@
 <hr align="left" width="100%">
 <h4>2023</h4>
 <ol start="1">
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese)</li>
+    <!-- <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese)</li> -->
 
 
     <!-- <li>Xiaoshi Wang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Guangyu Zhang, Zhuping Ding, Lirong He, <a href=""><strong><font color= "#00066f">An Adaptive Clustering Centered-Oriented Projection Method for Hypernym-Hyponym Relation Identification</font></strong></a>. </li> -->
