--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -355,11 +355,11 @@
 <!-- Neural network - C--> 
     <a href="" target="_blank">ICONIP</a>
     |
-    <a href="" target="_blank">KSEM</a>
+    <a href="https://ksem2025.scimeeting.cn/en/web/index/27434" target="_blank">KSEM</a>
     |
     <a href="" target="_blank">ESWC</a>
     |
-    <a href="" target="_blank">PRICAI</a>
+    <a href="https://pricai.org/2025/index.php" target="_blank">PRICAI</a>
     |
 <!-- software engineering - C-->
     <a href="" target="_blank">SEKE</a>
@@ -439,15 +439,31 @@
     | 
     <a href="https://mp.weixin.qq.com/s/MCApZ3uiHJknP4kS7NsnFw" target="_blank">哈工大SCIR 8篇长文被 COLING 2025录用</a>
     | 
-    <a href="https://mp.weixin.qq.com/s/CB5MfS3-M_Eq5Holh27kAg" target="_blank">快讯｜北邮GAMMA LAB的四篇工作被AAAI 2025录用</a>
-    | 
-    <a href="https://mp.weixin.qq.com/s/_aORLCuAgz0IsG8k9uTpVQ" target="_blank">哈工大SCIR 5篇论文被 AAAI 2025录用</a>
-    |
     <a href="https://mp.weixin.qq.com/s/FPWVvh5pEMiINML-ZFEq0w" target="_blank">【新闻】东北大学数据挖掘实验室1篇论文被COLING 2025录用</a>
     |  
     <a href="https://ccs.imu.edu.cn/info/1053/2347.htm" target="_blank">学院6篇论文被自然语言处理领域国际会议COLING 2025录用</a>
     |
-    <a href="https://" target="_blank">COLING 2025奖项公布：CIPS计算语言学专业委员会专委获最佳长论文奖和杰出论文奖</a>
+    <a href="https://mp.weixin.qq.com/s/CB5MfS3-M_Eq5Holh27kAg" target="_blank">快讯｜北邮GAMMA LAB的四篇工作被AAAI 2025录用</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/_aORLCuAgz0IsG8k9uTpVQ" target="_blank">哈工大SCIR 5篇论文被 AAAI 2025录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/t6g7wd-bGBKBZ4idM5pqMg" target="_blank">北京大学多媒体信息处理研究室的2篇论文被ICLR 2025录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/NXpc39nMQX3IHgwVzCQ1ew" target="_blank">人大高瓴人工智能学院师生论文被国际学术会议ICLR 2025录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/SjjHaOpaGQMBKEsqhvDxJw" target="_blank">TJUDB实验室3篇论文被国际顶级会议WWW 2025录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/05_oenl3rGxA2jLmaBLtpQ" target="_blank">人大高瓴人工智能学院师生论文被国际学术会议The Web Conference (WWW) 2025录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/a2bTELhqgkgsKht7uCtOKQ" target="_blank">龙蛇飞舞、恭贺新春 | 知识引擎实验室多篇新文章被ICLR、WWW、NAACL、Nature子刊、ACM Survey 等录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/_sJCC4ixKpDLyyH_Be-CMw" target="_blank">知识工场实验室近期录用论文一览（一）</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/FOizFG3ANyMXW6YCa6Xb8g" target="_blank">知识工场实验室近期录用论文一览（二）</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/hZtXU2ftk0tvx21LA_8o5g" target="_blank">吉林大学 | 计算机科学与技术学院十六篇论文入选人工智能领域顶级会议AAAI 2025</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/jPjhQY8qGkX-8RNlIVIseg" target="_blank">COLING 2025奖项公布：CIPS计算语言学专业委员会专委获最佳长论文奖和杰出论文奖</a>
     |
     <a href="https://mp.weixin.qq.com/s/gZRpxcUH4lMUf4mou0K5TA" target="_blank">蚂蚁开源 2024 年论文总结</a>
     |
