--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -315,15 +315,15 @@
     |
     <a href="https://conf.researchr.org/home/saner-2025" target="_blank">SANER</a>
     |
-    <a href="" target="_blank">ESEM</a>
+    <a href="https://conf.researchr.org/home/esem-2025" target="_blank">ESEM</a>
     |
-    <a href="" target="_blank">ISSRE</a>
+    <a href="https://issre.github.io/2025/index.html" target="_blank">ISSRE</a>
     |
     <a href="https://conf.researchr.org/home/icsme-2025" target="_blank">ICSME</a>
     |  
-    <a href="" target="_blank">ICPC</a>
+    <a href="https://conf.researchr.org/dates/icpc-2025" target="_blank">ICPC</a>
     |
-    <a href="" target="_blank">RE</a>
+    <a href="https://conf.researchr.org/home/RE-2025" target="_blank">Requirements Engineering</a>
     |
     <a href="https://conferences.big.tuwien.ac.at/caise2025/" target="_blank">CAiSE</a>
     |
@@ -409,7 +409,7 @@
 <!-- Multimedia Learning -->
     <a href="https://mmasia2025.org/" target="_blank">ACM Multimedia Asia</a>
     |
-    <a href="" target="_blank">ChinaMM</a>
+    <a href="https://conf.ccf.org.cn/web/api/m1318174965694074880173431900232.action" target="_blank">ChinaMM</a>
     |
 <!-- Geographic Information Systems -->
     <a href="" target="_blank">ACM SIGSPATIAL</a>
