--- a/pages/activities.html
+++ b/pages/activities.html
@@ -314,6 +314,10 @@
     <li><strong>Invited Reviewer</strong>, Computers and Electronics in Agriculture (<a href="https://www.sciencedirect.com/journal/computers-and-electronics-in-agriculture"><strong><u><font color="#874e26">CEA</font></u></strong></a>)</li>
 
 
+<!-- 2025.02.10 收到的审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, Advanced Engineering Informatics (<a href="https://www.sciencedirect.com/journal/advanced-engineering-informatics"><strong><u><font color="#874e26">AEI</font></u></strong></a>)</li>
+
+
 <!-- 2024.03.04 收到的审稿邀请 -->
     <li><strong>Invited Reviewer</strong>, Expert Systems With Applications (<a href="https://www.sciencedirect.com/journal/expert-systems-with-applications"><strong><u><font color="#874e26">ESWA</font></u></strong></a>)</li>
 
