--- a/pages/activities.html
+++ b/pages/activities.html
@@ -66,6 +66,8 @@
     border-left: 5px solid #0084f2;">Publicity chair</h3>
 <ul>
     <li><strong>Publicity chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2023/"><strong><u><font color="#874e26">CCKS 2023</font></u></strong></a>), Shenyang, China, August 24-27, 2023</li>
+
+    <li><strong>Publicity chair</strong>, 2025 6th International Conference on Natural Language Processing and Artificial Intelligence (<a href="https://nlpai.org/index.html"><strong><u><font color="#874e26">NLPAI 2025</font></u></strong></a>), Chongqing, China, Jnue 13-16, 2025</li>
 </ul>
 
 
