--- a/pages/activities.html
+++ b/pages/activities.html
@@ -340,7 +340,11 @@
 
     <li><strong>Invited Reviewer</strong>, CAAI Transactions on Intelligence Technology (<a href="https://ietresearch.onlinelibrary.wiley.com/journal/24682322"><strong><u><font color="#874e26">CAAI-TIT</font></u></strong></a>)</li>
 
-    
+
+<!-- 2025.03.22 收到的审稿邀请 -->  
+    <li><strong>Invited Reviewer</strong>, Future Generation Computer Systems (<a href="https://www.sciencedirect.com/journal/future-generation-computer-systems"><strong><u><font color="#874e26">Future Generation Computer Systems</font></u></strong></a>)</li>
+
+
     <li><strong>Invited Reviewer</strong>, Neurocomputing (<a href="https://www.sciencedirect.com/journal/neurocomputing"><strong><u><font color="#874e26">Neurocomputing</font></u></strong></a>)</li>
 
 
