--- a/pages/activities.html
+++ b/pages/activities.html
@@ -107,6 +107,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Program Committee</h3>
 <ul>
+    <li><strong>PC Member</strong>, The 14th International Joint Conference on Knowledge Graphs (<a href="https://ijckg2025.github.io/"><strong><u><font color="#874e26">IJCKG 2025</font></u></strong></a>), Heraklion, Grete, Greece, October 15-17, 2025</li>
+
+
     <li><strong>PC Member</strong>, The International World Wide Web Conference (<a href="https://www2025.thewebconf.org/"><strong><u><font color="#874e26">WWW 2025</font></u></strong></a>), Australia, April 28-May 2, 2025</li>
 
 
@@ -178,6 +181,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 14th International Joint Conference on Knowledge Graphs (<a href="https://ijckg2025.github.io/"><strong><u><font color="#874e26">IJCKG 2025</font></u></strong></a>), Heraklion, Grete, Greece, October 15-17, 2025</li>
+
+    
     <li><strong>Invited Reviewer</strong>, The 9th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="https://apweb2025.sau.edu.cn/"><strong><u><font color="#874e26">APWeb-WAIM 2025</font></u></strong></a>), Shenyang, China, August 28-30, 2025</li>
 
 
