--- a/pages/activities.html
+++ b/pages/activities.html
@@ -181,6 +181,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 21st International Joint Conference on Knowledge Graphs (<a href="https://adma2025.github.io/"><strong><u><font color="#874e26">ADMA 2025</font></u></strong></a>), Kyoto, Japan, October 22nd-24th, 2025</li>
+
+
     <li><strong>Invited Reviewer</strong>, The 14th International Joint Conference on Knowledge Graphs (<a href="https://ijckg2025.github.io/"><strong><u><font color="#874e26">IJCKG 2025</font></u></strong></a>), Heraklion, Grete, Greece, October 15-17, 2025</li>
 
     
