--- a/pages/activities.html
+++ b/pages/activities.html
@@ -181,6 +181,12 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 24th China National Conference on Computational Linguistics (<a href="http://cips-cl.org/static/CCL2025/index.html"><strong><u><font color="#874e26">CCL 2025</font></u></strong></a>), Jinan, Shandong, China, August 11st-14th, 2025</li>
+
+
+    <li><strong>Invited Reviewer</strong>, The 33rd ACM International Conference on Multimedia (<a href="https://acmmm2025.org/"><strong><u><font color="#874e26">ACMMM 2025</font></u></strong></a>), Dublin, Ireland, October 27nd-31st, 2025</li>
+
+
     <li><strong>Invited Reviewer</strong>, The 21st International Joint Conference on Knowledge Graphs (<a href="https://adma2025.github.io/"><strong><u><font color="#874e26">ADMA 2025</font></u></strong></a>), Kyoto, Japan, October 22nd-24th, 2025</li>
 
 
@@ -362,6 +368,10 @@
 
 
     <li><strong>Invited Reviewer</strong>, Pattern Recognition Letters (<a href="https://www.journals.elsevier.com/pattern-recognition-letters/"><strong><u><font color="#874e26">PR Letters</font></u></strong></a>)</li>
+
+
+<!-- 2025.04.19 收到的审稿邀请 -->  
+    <li><strong>Invited Reviewer</strong>, ACM Transactions on Autonomous and Adaptive Systems (<a href="https://dl.acm.org/journal/taas"><strong><u><font color="#874e26">IEEE TSMC-S</font></u></strong></a>)</li>
 
 
     <li><strong>Invited Reviewer</strong>, IEEE Access (<a href="https://ieeeaccess.ieee.org/"><strong><u><font color="#874e26">IEEE Access</font></u></strong></a>)</li>
