--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -471,6 +471,8 @@
     <a href="https://mp.weixin.qq.com/s/gZRpxcUH4lMUf4mou0K5TA" target="_blank">蚂蚁开源 2024 年论文总结</a>
     |
     <a href="https://mp.weixin.qq.com/s/jqFQH6ZYhZRrzilLAo9BiA" target="_blank">一文梳理业界落地LLM4Rec的若干范式-数万字超长文(建议收藏)</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s?__biz=MzUyNzA1MzQ2NA==&mid=2247484758&idx=1&sn=f7348527d0c28cedc969bde531c13957&chksm=fb5138228ae15b2e6f9a969c3ab657f255a5fe899c2ac0b43d5938041c2a649bb374d7e47303&mpshare=1&scene=23&srcid=0408eF4RjkMZIcjcOPV9CeQb&sharer_shareinfo=b0bf90ad158cf8f5cc5c758d78e4c0f1&sharer_shareinfo_first=b0bf90ad158cf8f5cc5c758d78e4c0f1#rd" target="_blank">THUIR师生论文获SIGIR 2025录用</a>
     |   
 <h4>2024</h4>
 <!-- network - A -->
