--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -213,6 +213,12 @@
     |
     <a href="" target="_blank">VLDB</a>
     |
+<!-- Acoustics, Speech and Signal Processing - B-->
+    <a href="https://2026.ieeeicassp.org/" target="_blank">ICASSP</a>
+    |
+<!-- Bioinformatics and Biomedicine - B-->
+    <a href="" target="_blank">BIBM (<a href="#" target="_blank">Download</a>)</a>
+    |
 <br/>
 
 <h4>2025</h4>
@@ -288,7 +294,7 @@
 <!-- data mining - B-->     
     <a href="" target="_blank">ICDM</a>
     |
-    <a href="" target="_blank">CIKM</a>
+    <a href="https://cikm2025.org/" target="_blank">CIKM</a>
     |
     <a href="https://www.wsdm-conference.org/2025/" target="_blank">WSDM</a>
     |
@@ -388,6 +394,8 @@
     |
     <a href="https://www.ccf.org.cn/Media_list/TC/2025-02-21/838215.shtml" target="_blank">WISA</a>
     |
+    <a href="https://cyprusconferences.org/ickg2025/" target="_blank">ICKG</a>
+    | 
 <!-- computer animation - C-->
     <a href="https://casa2025.sciencesconf.org/?lang=en" target="_blank">CASA</a>
     |
