--- a/pages/publications.html
+++ b/pages/publications.html
@@ -91,15 +91,11 @@
 
 
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, Yujie Song, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarACKGBuilder 1.0: A Carbon-Assessed Agricultural Crop Knowledge Graph System and Its Applications</font></strong></a>. Arxiv
-
-
-    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Ming Liu, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">Suicide Risk Detection Based On Context Multi-View Global Feature Learning</font></strong></a>. Arxiv
+        
 
 
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Xianming Zhang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Ming Liu, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">A Comprehensive Review of User Suicide Risk Detection from Social Media Data: Advance Methods, Resources, and Future Directions</font></strong></a>. Arxiv
 
-
-    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Ming Liu, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">FeaLearner: A Novel Framework of Self-Assessed Feature Learning and Selection for Enhancing Suicide Risk Detection from Social Media Data</font></strong></a>. Arxiv
    
 
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Cong Jin, Yujie Song, Lizhu Xiong, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">Plan-on-Knowledge Graph 1.0: Geographic Spatio-Temporal Resource Management and Schedule System with Knowledge Graph-Guided in Forest Fire-Resource Protection Scenarios</font></strong></a>. Arxiv-->
@@ -123,6 +119,15 @@
 
 
 <hr/>
+<!-- 2027 year -->
+<h4>2027</h4>
+<ol start="1">
+
+</ol>
+
+
+<hr/>
+
 
 <!-- 2026 year -->
 <h4>2026</h4>
@@ -142,7 +147,7 @@
     <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Jianglin Dai, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Hui Zhang, and Pingping Zhou, <a href="http://"><strong><font color= "#00066f">AgriRE: Relation Extraction from Chinese Agricultural-Aware Text with Attention-Grounded and Multi-Scale Graph Convolutional Network</font></strong></a>. Under review
 
 
-    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, <a href="http://"><strong><font color= "#00066f">FeaLearner: A Novel Framework of Self-adaptive Feature Learning and Selection for Enhancing Suicide Risk Detection from Social Media Data</font></strong></a>. Arxiv
+    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, <a href="http://"><strong><font color= "#00066f">FeaLearner: A Novel Framework of Self-Adaptive Feature Learning and Selection for Enhancing Suicide Risk Detection from Social Media Data</font></strong></a>. Arxiv
 
 
     <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Hui Zhang, Pingping Zhou, <a href="http://"><strong><font color= "#00066f">Agri-RelEx: A Sentence-Level Relation Extraction Framework from Chinese Agricultural Text with Attention-Guided and Multi-Scale Graph Convolutional Network</font></strong></a>. Arxiv
@@ -154,7 +159,7 @@
 <!-- 2024 year -->
 <h4>2024</h4>
 <ol start="1">
-    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">A Novel Suicide Risk Detection Method via Graph Context-Based Encoding and Adaptive Aggregation</font></strong></a>. The 7th International Conference on Natural Language Processing (<a href="https://www.icnlp.net/index.html"><strong><u><font color="#874e26">ICNLP-25</font></u></strong></a>). Guangzhou, China, March 21-23, 2025.
+    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">A Novel Suicide Risk Detection Method via Graph Context-Based Encoding and Adaptive Aggregation</font></strong></a>. The 7th International Conference on Natural Language Processing (<a href="https://www.icnlp.net/index.html"><strong><u><font color="#874e26">ICNLP-25</font></u></strong></a>). Guangzhou, China, March 21-23, 2025. (Best Paper Award)
 
 
     <li>Jingbao Luo, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, Ran Liu, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://experts.deakin.edu.au/28663-gang-li" target="_blank">Gang Li</a>, Xin Hu, and <a href="" target="_blank">WupengNjust</a>, <a href="https://openreview.net/forum?id=nbY3ZaoiDC"><strong><font color= "#00066f">Can Language Models Capture Human Writing Preferences on Text Summarization?</font></strong></a> Under review
