--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -414,6 +414,9 @@
     |
     <a href="https://www.icwsm.org/2025/" target="_blank">ICWSM</a>
     |
+<!--  -->
+    <a href="https://www.sigir-ap.org/sigir-ap-2025/" target="_blank">SigIR-AP</a>
+    |
 <!-- database -->
     <a href="https://mp.weixin.qq.com/s/oQnkQbQq9YNz3EAOHgmZ0g" target="_blank">NDBC</a>
     |
@@ -433,7 +436,7 @@
     <a href="" target="_blank">INLG</a>
     |
 <!-- software engineering - others -->
-    <a href="" target="_blank">ChinaSoft</a>
+    <a href="https://chinasoft.ccf.org.cn/#home" target="_blank">ChinaSoft</a>
     |
     <a href="" target="_blank">ChinaService</a>
     |
