--- a/pages/activities.html
+++ b/pages/activities.html
@@ -107,6 +107,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Program Committee</h3>
 <ul>
+    <li><strong>PC Member</strong>, The 32nd International Conference on Neural Information Processing (<a href="https://iconip2025.apnns.org/"><strong><u><font color="#874e26">ICONIP 2025</font></u></strong></a>), Okinawa, Japan, November 20th-24th, 2025</li>
+
+
     <li><strong>PC Member</strong>, The 14th International Joint Conference on Knowledge Graphs (<a href="https://ijckg2025.github.io/"><strong><u><font color="#874e26">IJCKG 2025</font></u></strong></a>), Heraklion, Grete, Greece, October 15-17, 2025</li>
 
 
@@ -181,6 +184,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 32nd International Conference on Neural Information Processing (<a href="https://iconip2025.apnns.org/"><strong><u><font color="#874e26">ICONIP 2025</font></u></strong></a>), Okinawa, Japan, November 20th-24th, 2025</li>
+
+
     <li><strong>Invited Reviewer</strong>, The 24th China National Conference on Computational Linguistics (<a href="http://cips-cl.org/static/CCL2025/index.html"><strong><u><font color="#874e26">CCL 2025</font></u></strong></a>), Jinan, Shandong, China, August 11st-14th, 2025</li>
 
 
