--- a/pages/activities.html
+++ b/pages/activities.html
@@ -107,6 +107,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Program Committee</h3>
 <ul>
+    <li><strong>PC Member</strong>, The 19th China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2025/"><strong><u><font color="#874e26">CCKS 2025</font></u></strong></a>), Fuzhou, China, September 19th-21st, 2025</li>
+
+
     <li><strong>PC Member</strong>, The 32nd International Conference on Neural Information Processing (<a href="https://iconip2025.apnns.org/"><strong><u><font color="#874e26">ICONIP 2025</font></u></strong></a>), Okinawa, Japan, November 20th-24th, 2025</li>
 
 
@@ -184,6 +187,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 19th China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2025/"><strong><u><font color="#874e26">CCKS 2025</font></u></strong></a>), Fuzhou, China, September 19th-21st, 2025</li>
+
+
     <li><strong>Invited Reviewer</strong>, The 32nd International Conference on Neural Information Processing (<a href="https://iconip2025.apnns.org/"><strong><u><font color="#874e26">ICONIP 2025</font></u></strong></a>), Okinawa, Japan, November 20th-24th, 2025</li>
 
 
